Css and added more stuff

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Current Weather - OOP</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 <body>
 <div id="weather">
   <div id ="description"></div>
   <h1 id="temp"></h1>
   <div id="location"></div>
+  <div id="windspeed"></div>
+  <div id="winddeg"></div>
+  <div id="humidity"></div>
 </div>
 <hr>
 <div>
@@ -19,6 +23,7 @@
         <input type="submit" value="Save changes">
     </form>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="classes/LS.js"></script>
 <script src="classes/weather.js"></script>
 <script src="classes/UI.js"></script>
